[CDAP-13461] Cloud/pipeline cleanup - Fixes vertical alignment of namespace and cloud icon, and fixes double line for buttons in pipeline canvas - Vertically aligns center tag text and + button - Changes some labels to follow sentence-style heading - Fixes vertical alignment of run profile in pipelines, and tags in tags modal - Changes boldness of tag in spotlight modal to be consistent

--- a/cdap-ui/app/cdap/components/SpotlightSearch/SpotlightModal/SpotlightModal.scss
+++ b/cdap-ui/app/cdap/components/SpotlightSearch/SpotlightModal/SpotlightModal.scss
@@ -136,6 +136,8 @@ $hightlight-color: #7f8c8d;
           color: white;
           border-radius: 3px;
           cursor: pointer;
+          line-height: 13px;
+          font-weight: normal;
         }
 
         &:hover {
