--- a/cdap-ui/app/cdap/components/Tags/Tags.scss
+++ b/cdap-ui/app/cdap/components/Tags/Tags.scss
@@ -39,9 +39,18 @@ $input-width: 120px;
     align-items: center;
     justify-content: center;
     line-height: 1;
+    height: 18px;
 
     &.plus-button-container {
       margin-left: 3px;
+      height: 18px;
+      background-color: $grey-04;
+      border-radius: 4px;
+      border-color: white;
+
+      .icon-plus {
+        font-size: 7px;
+      }
     }
   }
 
@@ -55,12 +64,6 @@ $input-width: 120px;
     margin-right: 3px;
     vertical-align: middle;
     font-size: 12px;
-  }
-
-  .plus-button-container {
-    background-color: $grey-04;
-    border: 2px solid white;
-    border-radius: 4px;
   }
 
   .tags-popover {
